sqlx_insert/tests/ui/not_compatible_fields.stderr
error[E0277]: the trait bound `ComplexType: Type<Postgres>` is not satisfied
 --> tests/ui/not_compatible_fields.rs:5:10
  |
5 | #[derive(SQLInsert, Clone, Debug)]
  |          ^^^^^^^^^ the trait `Type<Postgres>` is not implemented for `ComplexType`
  |
  = help: see issue #48214
  = note: this error originates in the derive macro `SQLInsert` (in Nightly builds, run with -Z macro-backtrace for more info)
